--- a/config/crd/standard/gateway.networking.k8s.io_httproutes.yaml
+++ b/config/crd/standard/gateway.networking.k8s.io_httproutes.yaml
@@ -1142,6 +1142,11 @@ spec:
                               - message: filter.urlRewrite must be specified for URLRewrite
                                   filter.type
                                 rule: '!(!has(self.urlRewrite) && self.type == ''URLRewrite'')'
+                              - message: filter.cors must be nil if the filter.type
+                                  is not CORS
+                                rule: '!(has(self.cors) && self.type != ''CORS'')'
+                              - message: filter.cors must be specified for CORS filter.type
+                                rule: '!(!has(self.cors) && self.type == ''CORS'')'
                               - message: filter.extensionRef must be nil if the filter.type
                                   is not ExtensionRef
                                 rule: '!(has(self.extensionRef) && self.type != ''ExtensionRef'')'
@@ -2033,6 +2038,11 @@ spec:
                         - message: filter.urlRewrite must be specified for URLRewrite
                             filter.type
                           rule: '!(!has(self.urlRewrite) && self.type == ''URLRewrite'')'
+                        - message: filter.cors must be nil if the filter.type is not
+                            CORS
+                          rule: '!(has(self.cors) && self.type != ''CORS'')'
+                        - message: filter.cors must be specified for CORS filter.type
+                          rule: '!(!has(self.cors) && self.type == ''CORS'')'
                         - message: filter.extensionRef must be nil if the filter.type
                             is not ExtensionRef
                           rule: '!(has(self.extensionRef) && self.type != ''ExtensionRef'')'
@@ -3857,6 +3867,11 @@ spec:
                               - message: filter.urlRewrite must be specified for URLRewrite
                                   filter.type
                                 rule: '!(!has(self.urlRewrite) && self.type == ''URLRewrite'')'
+                              - message: filter.cors must be nil if the filter.type
+                                  is not CORS
+                                rule: '!(has(self.cors) && self.type != ''CORS'')'
+                              - message: filter.cors must be specified for CORS filter.type
+                                rule: '!(!has(self.cors) && self.type == ''CORS'')'
                               - message: filter.extensionRef must be nil if the filter.type
                                   is not ExtensionRef
                                 rule: '!(has(self.extensionRef) && self.type != ''ExtensionRef'')'
@@ -4748,6 +4763,11 @@ spec:
                         - message: filter.urlRewrite must be specified for URLRewrite
                             filter.type
                           rule: '!(!has(self.urlRewrite) && self.type == ''URLRewrite'')'
+                        - message: filter.cors must be nil if the filter.type is not
+                            CORS
+                          rule: '!(has(self.cors) && self.type != ''CORS'')'
+                        - message: filter.cors must be specified for CORS filter.type
+                          rule: '!(!has(self.cors) && self.type == ''CORS'')'
                         - message: filter.extensionRef must be nil if the filter.type
                             is not ExtensionRef
                           rule: '!(has(self.extensionRef) && self.type != ''ExtensionRef'')'
