--- a/config/crd/experimental/gateway.networking.x-k8s.io_backendtrafficpolicies.yaml
+++ b/config/crd/experimental/gateway.networking.x-k8s.io_backendtrafficpolicies.yaml
@@ -97,8 +97,8 @@ spec:
                     x-kubernetes-validations:
                     - message: budgetInterval can not be greater than one hour or
                         less than one second
-                      rule: '!(duration(self.budgetInterval) < duration(''1s'') ||
-                        duration(self.budgetInterval) > duration(''1h''))'
+                      rule: '!(duration(self) < duration(''1s'') || duration(self)
+                        > duration(''1h''))'
                   budgetPercent:
                     default: 20
                     description: |-
