--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -70,17 +70,17 @@ nav:
   - Overview:
     - Introduction: index.md
     - Concepts:
-        API Overview: concepts/api-overview.md
-        Conformance: concepts/conformance.md
-        Roles and Personas: concepts/roles-and-personas.md
-        Security Model: concepts/security-model.md
-        Tools: concepts/tooling.md
-        Use Cases: concepts/use-cases.md
-        Versioning: concepts/versioning.md
+      - API Overview: concepts/api-overview.md
+      - Conformance: concepts/conformance.md
+      - Roles and Personas: concepts/roles-and-personas.md
+      - Security Model: concepts/security-model.md
+      - Tools: concepts/tooling.md
+      - Use Cases: concepts/use-cases.md
+      - Versioning: concepts/versioning.md
     - Service Mesh:
-        Overview: mesh/index.md
-        GAMMA Initiative: mesh/gamma.md
-        Service Facets: mesh/service-facets.md
+      - Overview: mesh/index.md
+      - GAMMA Initiative: mesh/gamma.md
+      - Service Facets: mesh/service-facets.md
     - Implementations:
         - List: implementations.md
         - Comparisons:
